# pantry-manager-api

./: .drone.yml  Cargo.toml  Pantry.toml  README.md  Rocket.toml  azure-pipelines.yml  dockerfile  sonar-project.properties
.github/workflows/: rust.yml
entity/: Cargo.toml
entity/src/entities/: grocery.rs  inventory.rs  mod.rs  prelude.rs  products.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220525_141804_m20220525_1418_create_product_table.rs  m20220526_100904_m20220526_1008_create_inventory_table.rs  m20230331_071144_m20230331_create_grocery.rs
repository/: Cargo.toml
repository-db/: Cargo.toml
repository-db/src/: lib.rs
repository/src/: inventory_respository_tests.rs  lib.rs  repositories.rs  tests.rs
repository/src/repositories/: grocery_repository.rs  inventory_repository.rs  product_repository.rs
src/: controllers.rs  main.rs  models.rs  services.rs  tests.rs
src/controllers/: grocery_controllers.rs  inventory_controllers.rs  product_controllers.rs
src/services/: grocery_services.rs  inventory_services.rs  product_services.rs
