[package]
edition = "2021"
name = "pantry-manager-api"
version = "0.1.0"

[workspace]
members = [".", "entity", "migration", "repository", "repository-db"]

[dependencies]
async-stream = "^0.3"
async-trait = "0.1"
reqwest = {version = "0.11", features = ["json"]}
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "^1"
rocket_cors = "0.6.0-alpha1"

entity = {path = "entity"}
migration = {path = "migration"}
repository-db = {path = "repository-db"}
repository = {path = "repository"}

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
features = ["sqlx-postgres", "runtime-tokio-native-tls"]
version = "^0.8"
