[package]
edition = "2021"
name = "pantry-manager-api"
version = "0.1.0"

[workspace]
members = [".", "entity", "migration", "repository", "repository-db"]

[dependencies]
async-stream = "^0.3"
async-trait = "0.1"
okapi = {version = "0.7.0-rc.1"}
reqwest = {version = "0.11", features = ["json"]}
rocket = {version = "0.5.0-rc.2", default-features = false, features = ["json"]}
rocket_cors = "0.6.0-alpha1"
rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "rapidoc"]}
schemars = "0.8.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "^1"

entity = {path = "entity"}
migration = {path = "migration"}
repository = {path = "repository"}
repository-db = {path = "repository-db"}

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
features = ["sqlx-postgres", "runtime-tokio-native-tls"]
version = "^0.8"
