[package]
edition = "2021"
name = "pantry-manager-api"
version = "0.2.0"

[workspace]
members = [".", "entity", "migration", "repository", "repository-db"]

[dependencies]
async-stream = "^0.3"
async-trait = "0.1"
okapi = { version = "0.7.0" }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "^1"

sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sea-orm-rocket = { version = "0.5.4" }

entity = { path = "entity" }
migration = { path = "migration" }
repository = { path = "repository" }
repository-db = { path = "repository-db" }
