[package]
edition = "2021"
name = "repository"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2"}
sea-orm = {version = "^0.8", features = ["sqlx-sqlite", "runtime-tokio-native-tls"]}

entity = {path = "../entity"}

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
